placement flex elements

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,15 +17,40 @@ img{
   padding: 20px;
   background: #fff;
   border-radius: 3px;
-  display: flex;
-  height: 500px;
 }
 .bl{
   padding: 5px 10px;
   border:1px solid #ddd;
   background: #fffde1;
   border-radius: 3px;
-  height: 20px;
-  margin: auto;
+  margin: 20px;
+}
+.main {
+  display: flex;
+  height: 500px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
 
+}
+.bl {
+
+}
+.fl1 {
+  font-size: 8px;
+}
+.fl2 {
+  font-size: 10px;
+}
+.fl3 {
+  font-size: 12px;
+}
+.fl4 {
+  font-size: 14px;
+}
+.fl5 {
+  font-size: 16px;
+}
+.fl6 {
+  font-size: 18px;
 }
