--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,12 +17,7 @@ img {
   padding: 20px;
   background: #fff;
   -webkit-border-radius: 3px;
-          border-radius: 3px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  height: 500px; }
+          border-radius: 3px; }
 
 .bl {
   padding: 5px 10px;
@@ -30,5 +25,42 @@ img {
   background: #fffde1;
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  height: 20px;
-  margin: auto; }
+  margin: 20px; }
+
+.main {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 500px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+
+.fl1 {
+  font-size: 8px; }
+
+.fl2 {
+  font-size: 10px; }
+
+.fl3 {
+  font-size: 12px; }
+
+.fl4 {
+  font-size: 14px; }
+
+.fl5 {
+  font-size: 16px; }
+
+.fl6 {
+  font-size: 18px; }
