--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,30 +27,34 @@ img{
 }
 .main {
   display: flex;
-  height: 500px;
-  flex-direction: row;
+  height: 200px;
+  max-width:1000px;
+  margin: 20px auto;
+  //flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
-
+  align-items: stretch;
+  //flex-wrap: wrap;
+  align-content: stretch;
+  flex-flow: column wrap;
 }
 .bl {
-
+  height: 100px;
 }
 .fl1 {
-  font-size: 8px;
+
 }
 .fl2 {
-  font-size: 10px;
+
 }
 .fl3 {
-  font-size: 12px;
+
 }
 .fl4 {
-  font-size: 14px;
+
 }
 .fl5 {
-  font-size: 16px;
+
 }
 .fl6 {
-  font-size: 18px;
+
 }
